Updated website content

--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
             border-color: var(--primary-color);
         }
         .search-prompt {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px; /* Space between icon and text */
             text-align: center;
             color: var(--icon-color);
             padding: 40px 20px;
@@ -204,6 +208,11 @@
             line-height: 1.5;
             opacity: 0.8;
             user-select: none; /* Prevent text selection on this prompt */
+        }
+        .search-prompt svg {
+            width: 32px;
+            height: 32px;
+            opacity: 0.5;
         }
         .link-display {
             flex-grow: 1;
@@ -1027,11 +1036,6 @@
 
                 const searchUrl = `https://duckduckgo.com/?q=${encodeURIComponent(query)}`;
                 await launchUrlOnRabbit(searchUrl, `search for ${query}`);
-                
-                // This code will likely run only if the user returns to the app,
-                // at which point we want to reset to the main view.
-                searchInput.value = '';
-                searchHandler('');
             } else {
                 // If called with no query (e.g. empty search box + enter), just show the main list.
                 searchHandler('');
@@ -1065,7 +1069,7 @@
                 header.className = 'category-header';
                 header.textContent = 'Web Suggestions';
                 if (hasContent) { // If we already rendered local results, add space
-                    header.style.marginTop = '20px';
+                    header.style.marginTop = '15px';
                 }
                 fragment.appendChild(header);
                 hasContent = true;
@@ -1214,7 +1218,12 @@
                 if (e.target.id === 'searchInput') {
                     // If the search input is empty when focused, clear the list and show a prompt.
                     if (e.target.value.trim() === '') {
-                        linksList.innerHTML = '<div class="search-prompt">Search your links or add from the web.</div>';
+                        linksList.innerHTML = `
+                            <div class="search-prompt">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.031 16.617l4.283 4.282-1.415 1.415-4.282-4.283A8.96 8.96 0 0 1 11 20c-4.968 0-9-4.032-9-9s4.032-9 9-9 9 4.032 9 9a8.96 8.96 0 0 1-1.969 5.617zm-2.006-.742A6.977 6.977 0 0 0 18 11c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15z"/></svg>
+                                <div>Search your links or add from the web.</div>
+                            </div>
+                        `;
                     }
                     // Scroll it into view to avoid the keyboard.
                     setTimeout(() => {
