Updated website content

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
             font-size: 1em;
             min-width: 0; /* Fix for flexbox overflow */
         }
+        input[type="text"]:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
         button {
             padding: 8px 8px;
             border: none;
@@ -197,22 +201,13 @@
             border-color: var(--primary-color);
         }
         .search-prompt {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 15px; /* Space between icon and text */
             text-align: center;
             color: var(--icon-color);
-            padding: 40px 20px;
-            font-size: 1.1em;
+            padding: 20px; /* Reduced padding to keep it visible with keyboard */
+            font-size: 1em;
             line-height: 1.5;
             opacity: 0.8;
             user-select: none; /* Prevent text selection on this prompt */
-        }
-        .search-prompt svg {
-            width: 32px;
-            height: 32px;
-            opacity: 0.5;
         }
         .link-display {
             flex-grow: 1;
@@ -1218,12 +1213,7 @@
                 if (e.target.id === 'searchInput') {
                     // If the search input is empty when focused, clear the list and show a prompt.
                     if (e.target.value.trim() === '') {
-                        linksList.innerHTML = `
-                            <div class="search-prompt">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.031 16.617l4.283 4.282-1.415 1.415-4.282-4.283A8.96 8.96 0 0 1 11 20c-4.968 0-9-4.032-9-9s4.032-9 9-9 9 4.032 9 9a8.96 8.96 0 0 1-1.969 5.617zm-2.006-.742A6.977 6.977 0 0 0 18 11c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15z"/></svg>
-                                <div>Search your links or add from the web.</div>
-                            </div>
-                        `;
+                        linksList.innerHTML = `<div class="search-prompt">Search your links or add from the web.</div>`;
                     }
                     // Scroll it into view to avoid the keyboard.
                     setTimeout(() => {
