--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             text-align: center;
             align-items: center;
             padding-top: var(--rabbit-safe-area-inset-top, 20px);
-            margin-bottom: 10px;
+            margin-bottom: 8px; /* Reduced margin to tighten layout */
         }
         header img {
             max-width: 100%;
-            height: 45px;
+            height: 40px; /* Reduced height to save space */
             object-fit: contain;
         }
         header #themeBtn {
             position: absolute;
-            top: 0;
+            top: var(--rabbit-safe-area-inset-top, 20px); /* Align with logo */
             right: 0;
             background: transparent;
             border: none;
