--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             text-align: center;
             align-items: center;
             padding-top: var(--rabbit-safe-area-inset-top, 20px);
-            margin-bottom: 8px; /* Reduced margin to tighten layout */
+            margin-bottom: 5px; /* Further reduced margin for a more compact header */
         }
         header img {
             max-width: 100%;
-            height: 40px; /* Reduced height to save space */
+            height: 30px; /* Further reduced height for a more compact header */
             object-fit: contain;
         }
         header #themeBtn {
