Updated website content

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             text-align: center;
             align-items: center;
             padding-top: var(--rabbit-safe-area-inset-top, 20px);
-            margin-bottom: 5px; /* Further reduced margin for a more compact header */
+            margin-bottom: 8px; /* Restored a bit of margin for balance */
         }
         header img {
             max-width: 100%;
-            height: 30px; /* Further reduced height for a more compact header */
+            height: 35px; /* A balanced height for the logo */
             object-fit: contain;
         }
         header #themeBtn {
